--- a/0x0c_viper/Code/View/viewcontroller.swift.liquid
+++ b/0x0c_viper/Code/View/viewcontroller.swift.liquid
@@ -28,6 +28,8 @@ class {{ module_info.name }}ViewController: UIViewController {
         super.viewDidLoad()
         presenter.viewDidLoad()
     }
+
+    // MARK: Other private methods
 }
 
 extension {{ module_info.name }}ViewController: {{module_info.name}}ViewInput {}
