--- a/0x0c_viper/Code/Presenter/presenter.swift.liquid
+++ b/0x0c_viper/Code/Presenter/presenter.swift.liquid
@@ -6,7 +6,7 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-import UIKit
+import Foundation
 
 protocol {{ module_info.name }}PresenterInput: AnyObject {
     // MARK: View Life-Cycle methods
@@ -16,7 +16,7 @@ protocol {{ module_info.name }}PresenterInput: AnyObject {
     // MARK: Other methods called from View
 }
 
-class {{ module_info.name }}Presenter {
+final class {{ module_info.name }}Presenter {
     // MARK: VIPER properties
 
     weak var view: {{ module_info.name }}ViewInput!
